<?xml version="1.0"?>
<package format="2">
  <name>zeabus_mission</name>
  <version>0.0.0</version>
  <description>The zeabus_mission package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="shayennn@todo.todo">shayennn</maintainer>
  <maintainer email="supasan.k@ku.th">K.Supasan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
